--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-responsive-carousel": "^3.1.51",
     "react-responsive-tabs": "^3.3.0",
     "react-router-dom": "^5.1.2",
+    "serialize-javascript": "^2.1.2",
     "styled-components": "^4.4.1",
     "styled-theme": "^0.3.3",
     "styled-tools": "^1.7.1",
